// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource collection GET /users should return 200 1`] = `
Object {
  "email": "john.doe@gmail.com",
  "firstName": "John",
  "lastName": "Doe",
}
`;

exports[`Resource collection POST /users should return 400 when payload is invalid 1`] = `
Object {
  "error": "Document failed validation",
}
`;

exports[`Resource document DELETE /users/:_id should return 200 1`] = `
Array [
  "ok",
  "n",
]
`;

exports[`Resource document DELETE /users/:_id should return 200 2`] = `
Object {
  "n": 1,
  "ok": 1,
}
`;

exports[`Resource document GET /users/:_id should return 200 1`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "email",
]
`;

exports[`Resource document GET /users/:_id should return 200 2`] = `
Object {
  "email": "john.doe@gmail.com",
  "firstName": "John",
  "lastName": "Doe",
}
`;

exports[`Resource document PATCH /users/:_id should return 200 1`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "email",
]
`;

exports[`Resource document PATCH /users/:_id should return 200 2`] = `
Object {
  "email": "john.doe@gmail.com",
  "firstName": "Laura",
  "lastName": "Doe",
}
`;
